# elevation_mapping_ros2

./: CHANGELOG.md  CMakeLists.txt  README.md  configparam.md  package.xml
config/elevation_maps/: fastlio_default_map.yaml
config/full_params/: fastlio_pointcloud.yaml
config/postprocessing/: postprocessor_pipeline.yaml
config/robots/: fastlio_mid360_robot.yaml
config/sensor_processors/: mid360_laser.yaml
include/elevation_mapping/: ElevationMap.hpp  ElevationMapFunctors.hpp  ElevationMapRobotFrameSampler.hpp  ElevationMapping.hpp  KindrRosCompat.hpp  ParameterHelpers.hpp  PointXYZRGBConfidenceRatio.hpp  RobotMotionMapUpdater.hpp  ThreadSafeDataWrapper.hpp  WeightedEmpiricalCumulativeDistributionFunction.hpp
include/elevation_mapping/input_sources/: Input.hpp  InputSourceManager.hpp
include/elevation_mapping/postprocessing/: PostprocessingPipelineFunctor.hpp  PostprocessingWorker.hpp  PostprocessorPool.hpp
include/elevation_mapping/sensor_processors/: LaserSensorProcessor.hpp  PerfectSensorProcessor.hpp  SensorProcessorBase.hpp  StereoSensorProcessor.hpp  StructuredLightSensorProcessor.hpp
launch/: fastlio_elevation_mapping.launch.py
scripts/: print_elevation_sampled_cloud.py
src/: ElevationMap.cpp  ElevationMapRobotFrameSampler.cpp  ElevationMapping.cpp  PointXYZRGBConfidenceRatio.cpp  RobotMotionMapUpdater.cpp  elevation_mapping_node.cpp
src/input_sources/: Input.cpp  InputSourceManager.cpp
src/postprocessing/: PostprocessingPipelineFunctor.cpp  PostprocessingWorker.cpp  PostprocessorPool.cpp
src/sensor_processors/: LaserSensorProcessor.cpp  PerfectSensorProcessor.cpp  SensorProcessorBase.cpp  StereoSensorProcessor.cpp  StructuredLightSensorProcessor.cpp
